kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: care-up
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.15.0
          ports:
            - containerPort: 5601
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/status
              port: 5601
            initialDelaySeconds: 25
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: care-up
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
  type: ClusterIP
