ordering.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering
  namespace: care-up
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordering
  template:
    metadata:
      labels:
        app: ordering
    spec:
      containers:
        - name: ordering
          image: 565393060633.dkr.ecr.ap-northeast-2.amazonaws.com/careup/ordering:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: ordering-service
  namespace: care-up
spec:
  selector:
    app: ordering
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
