zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: care-up
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          ports:
            - containerPort: 2181
          livenessProbe:
            tcpSocket:
              port: 2181
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 2181
            initialDelaySeconds: 90
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: care-up
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
  type: ClusterIP
