ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careup-ingress
  namespace: care-up
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - "server.careup.store"
      secretName: server-careup-store-tls
  rules:
    - host: server.careup.store
      http:
        paths:
          - path: /ordering-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ordering-service
                port:
                  number: 80
          - path: /branch-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: branch-service
                port:
                  number: 80
